--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trust in the LORD</title>
+  <title>Trust in the LORD and you will be saved!!</title>
   <style>
     body {
       font-family: sans-serif;
