--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Website</h1>
+    <h1>This is Nissi Wallace's Page</h1>
     <p>This site is hosted with GitHub Pages.</p>
   </header>
 
