--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <header>
     <h1>This is Nissi Wallace's Page</h1>
-    <p>This site is hosted with GitHub Pages.</p>
+    <p>This site is hosted by Monica Wallace.</p>
   </header>
 
   <main>
