--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Trust in the LORD and you will be saved!!!</title>
   <style>
+    <!-- 👇 This goes right before </body> -->
+<script type="text/javascript">
+  (function(d, m){
+    var kommunicateSettings = {
+      "appId": "YOUR_APP_ID",
+      "popupWidget": true,
+      "automaticChatOpenOnNavigation": true
+    };
+    var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+    s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+    var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+    window.kommunicate = m; m._globals = kommunicateSettings;
+  })(document, window.kommunicate || {});
+</script>
+</body>
     body {
       font-family: sans-serif;
       margin: 0;
